--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angularPrac2",
+  "name": "Supplyai",
   "version": "0.0.1",
-  "description": "angularPrac2",
+  "description": "supplyai",
   "authors": [],
   "license": "MIT",
   "ignore": [
@@ -28,8 +28,9 @@
     "toastr": "^2.1.2",
     "angular-animate": "^1.5.3",
     "angular-bootstrap": "^1.2.5",
-    "d3": "^4.2.6",
-    "angular-material": "^1.1.1"
+    "d3": "3.5.3",
+    "angular-material": "^1.1.1",
+    "angular-nvd3": "^1.0.9"
   },
   "resolutions": {
     "angular": "1.5.3"
