--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angularPrac2",
-  "description": "angularPrac2 Project Generated from HotTowel Angular",
+  "name": "ChartAp",
+  "description": "ChartAp Project Generated from HotTowel Angular",
   "version": "0.0.0",
   "scripts": {
     "init": "npm install",
